# gitreport

./: .gitignore  gitreport.toml.example  pyproject.toml
gitreport/: __init__.py  ai.py  cli.py  config.py  db.py  github.py  render.py  server.py  sync.py
gitreport/static/css/: report.css
gitreport/static/js/: report.js
gitreport/templates/: base.html.j2
gitreport/templates/macros/: branch_item.html.j2  commits_list.html.j2  hotfiles.html.j2  pr_card.html.j2  summary_block.html.j2  user_table.html.j2
gitreport/templates/partials/: footer.html.j2  header.html.j2  overall_summary.html.j2  overview_grid.html.j2  period_block.html.j2  toc.html.j2  trend_chart.html.j2
tests/: conftest.py  test_ai.py  test_cli.py  test_config.py  test_db.py  test_render.py  test_scenarios.py
