[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitreport"
version = "0.1.0"
description = "Local GitHub analytics with SQLite cache and AI summaries"
requires-python = ">=3.11"
dependencies = [
    "mistune>=3",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.8"]

[project.scripts]
gitreport = "gitreport.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
